migrate from javafx to libGDX