@@ -1,52 +1,131 @@
-plugins {
-    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+buildscript {
+
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        google()
+    }
+    dependencies {
+        classpath 'org.wisepersist:gwt-gradle-plugin:1.0.13'
+        classpath "gradle.plugin.org.gretty:gretty:3.0.3"
+        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.12'
+    }
 }
 
-group 'net.yudichev'
-version '1.0-SNAPSHOT'
+allprojects {
+    apply plugin: "eclipse"
 
-javafx {
-    version = "15.0.1"
-    modules = ['javafx.controls']
+    version = '1.0'
+    ext {
+        appName = "ntetris"
+        gdxVersion = '1.9.13' // TODO upgrade when 1.9.15 is released
+        roboVMVersion = '2.3.12'
+        box2DLightsVersion = '1.5'
+        ashleyVersion = '1.7.3'
+        aiVersion = '1.8.2'
+        gdxControllersVersion = '2.1.0'
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        google()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+            mavenContent {
+                snapshotsOnly()
+            }
+        }
+        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+    }
 }
 
-application {
-    mainClassName = 'net.yudichev.ntetris.Main'
-    applicationName = 'N-Tetris'
-    applicationDefaultJvmArgs = ['--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
-                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
-                                 '--add-opens', 'javafx.controls/javafx.scene.control=ALL-UNNAMED',
-                                 '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-                                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-                                 '--add-exports', 'javafx.graphics/com.sun.javafx.menu=ALL-UNNAMED']
+project(":desktop")
+
+project(":android") {
+    apply plugin: "com.android.application"
+
+    sourceCompatibility = '1.8'
+
+    configurations { natives }
+
+    dependencies {
+        implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
+        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi"
+        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi-v7a"
+        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
+        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
+        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+
+        implementation 'org.slf4j:slf4j-android:1.7.30'
+    }
 }
 
-repositories {
-    mavenCentral()
+project(":ios") {
+    apply plugin: "java-library"
+    apply plugin: "robovm"
+
+    sourceCompatibility = '1.8'
+
+    dependencies {
+        implementation project(":core")
+        api "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
+        api "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
+        api "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+        api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
+    }
 }
 
-dependencies {
-    implementation 'com.google.guava:guava:30.1-jre'
-    implementation 'org.slf4j:slf4j-api:1.7.30'
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.12.1'
-    runtimeOnly 'org.apache.logging.log4j:log4j-jcl:2.12.1'
-    runtimeOnly "com.fasterxml.jackson.core:jackson-databind:2.9.9"
-    runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.9'
-    runtimeOnly 'com.lmax:disruptor:3.4.2'
+project(":html") {
+    apply plugin: "java-library"
+    apply plugin: "gwt"
+    apply plugin: "war"
+    apply plugin: "org.gretty"
 
-    compileOnly 'org.immutables:value:2.8.8'
-    annotationProcessor 'org.immutables:value:2.8.8'
-    testAnnotationProcessor 'org.immutables:value:2.8.8'
+    sourceCompatibility = '1.8'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
-    testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation 'org.mockito:mockito-core:3.7.7'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:1.7.0'
+    dependencies {
+        implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
+        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
+        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
+        api "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+    }
 }
 
-test {
-    useJUnitPlatform()
+project(":core") {
+    apply plugin: "java-library"
+
+    sourceCompatibility = '1.8'
+
+    dependencies {
+        api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        api 'org.slf4j:slf4j-api:1.7.30'
+
+        //noinspection AnnotationProcessorOnCompilePath
+        compileOnly 'org.immutables:value:2.8.8'
+        annotationProcessor 'org.immutables:value:2.8.8'
+        testAnnotationProcessor 'org.immutables:value:2.8.8'
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
+        testImplementation 'org.assertj:assertj-core:3.19.0'
+        testImplementation 'org.mockito:mockito-core:3.7.7'
+        testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    }
 }
